[project]
name = "axon"
version = "0.2.0"
description = "AI-native system intelligence layer: self-monitoring, self-healing, human-approved"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.40.0"]
openai = ["openai>=1.40.0"]
gemini = ["google-genai>=1.0.0"]
all = ["anthropic>=0.40.0", "openai>=1.40.0", "google-genai>=1.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
axon = "axon.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
